--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -14,9 +14,11 @@
     @Styles.Render("~/katex_css")
 </head>
 <body>
-    <div id="canvasContainer">
-        <canvas id="finalDrawCanvas"></canvas>
-        <div id="bufferContainer">
+    <div id="canvasBackground">
+        <div id="canvasContainer">
+            <canvas id="finalDrawCanvas"></canvas>
+            <div id="bufferContainer">
+            </div>
         </div>
     </div>
 
