made dragging work somewhat

--- a/CollaborationBoard/Content/app.less
+++ b/CollaborationBoard/Content/app.less
@@ -1,7 +1,7 @@
 ﻿@mainColor: #779ecb;
 @darkerMainColor: #698ab1;
-@darkestMainColor: #556f8e;
-@superDarkMainColor: #303c4a;
+@darkestMainColor: #537198;
+@superDarkMainColor: #2d3640;
 @lighterMainColor: #aecdf2;
 @lightestMainColor: #c9e2ff;
 @accentColor: #ffd800;
@@ -141,7 +141,8 @@ body {
 }
 
 .iconButton.selected {
-    background-color: @darkestMainColor;
+    background-color: @superDarkMainColor;
+    color: white;
 }
 
 .toolButton {
