made the toolbox look more professional

--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -23,11 +23,15 @@
     </div>
 
     <div id="toolbox">
-        <div id="drawer" class="iconButton"><i class="fa fa-pencil"></i></div>
-        <div id="eraser" class="iconButton"><i class="fa fa-eraser"></i></div>
-        <div id="colors" class="iconButton"><i class="fa fa-tint"></i></div>
-        <div id="thickness" class="iconButton"><i class="fa fa-sliders"></i></div>
-        <div id="clear" class="iconButton"><i class="fa fa-times"></i></div>
+        <div id="tools">
+            <div class="buttonGroup" id="drawer"><div class="iconButton"><i class="fa fa-pencil"></i></div> pencil</div>
+            <div class="buttonGroup" id="eraser"><div class="iconButton"><i class="fa fa-eraser"></i></div> eraser</div>
+        </div>
+        <div id="options">
+            <div class="buttonGroup" id="colors"><div class="iconButton"><i class="fa fa-tint"></i></div> colors</div>
+            <div class="buttonGroup" id="thickness"> <div class="iconButton"><i class="fa fa-sliders"></i></div>size</div>
+            <div class="buttonGroup" id="clear"><div class="iconButton"><i class="fa fa-times"></i></div>clear</div>
+        </div>
     </div>
 
     <div id="colorPicker" class="hidden">
