--- a/CollaborationBoard/Content/app.less
+++ b/CollaborationBoard/Content/app.less
@@ -106,43 +106,66 @@ body {
     background-color: red;
 }
 
-@toolboxWidth: 500px;
-@toolboxItemSize: 30px;
+@toolboxItemWidth: 50px;
+@toolboxItemHeight: 23px;
 @toolboxMargin: 2px;
 @toolboxIconSize: 15pt;
+@toolTitleSize: 15px;
+@toolBoxWidth: 5 * @toolboxItemWidth + 2 * @toolboxMargin;
 
 #toolbox {
     .noSelect;
     .bigShadow;
     position: absolute;
     top: 15px;
-    left: ~"calc(100vw / 2 - @{toolboxWidth} / 2)";
-    width: @toolboxWidth;
-    height: @toolboxItemSize + 2 * @toolboxMargin;
+    left: ~"calc(50vw - @{toolBoxWidth} / 2)";
+    width: @toolBoxWidth;
+    height: @toolboxItemHeight + 3 * @toolboxMargin + @toolTitleSize;
     background-color: @mainColor;
     padding: @toolboxMargin;
+
+    .toolGroup {
+        height: inherit;
+        float: left;
+    }
+
+    #tools {
+        .toolGroup;
+    }
+
+    #options {
+        .toolGroup;
+    }
+}
+
+.buttonGroup {
+    width: @toolboxItemWidth;
+    height: @toolboxIconSize + @toolTitleSize;
+    float: left;
+    text-align: center;
+    font-size: 8pt;
+    font-family: 'Droid Sans', sans-serif;
 }
 
 .iconButton {
     .flexBox;
     cursor: pointer;
-    float: left;
-    width: @toolboxItemSize;
-    height: @toolboxItemSize;
+    width: @toolboxItemWidth;
+    height: @toolboxItemHeight;
     align-items: center;
     justify-content: center;
     font-size: @toolboxIconSize;
 }
 
-.iconButton:hover {
+.buttonGroup:hover {
     background-color: @darkerMainColor;
 }
 
-.iconButton:active {
+.buttonGroup:active {
     background-color: @darkestMainColor;
 }
 
-.iconButton.selected {
+.buttonGroup.selected {
     background-color: @superDarkMainColor;
     color: white;
 }
@@ -395,7 +418,7 @@ body {
     box-sizing: content-box;
     width: 150px;
     height: 150px;
-    background-color: white;
+    background-color: #586572;
     display: flex;
     flex-wrap: wrap;
     overflow: hidden;
@@ -410,7 +433,7 @@ body {
     width: 20px;
     height: 20px;
     margin: 5px;
-    border-radius: 100%;
+    /*border-radius: 100%;*/
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
