--- a/CollaborationBoard/Views/Home/Index.cshtml
+++ b/CollaborationBoard/Views/Home/Index.cshtml
@@ -4,7 +4,24 @@
 
 <div class="jumbotron">
     <h1>Collaboration Board</h1>
-    <p class="lead">DESCRIPTION</p>
+    <p class="lead"> Work together on problems with anyone, anytime.</p>
 
-    @Html.Partial("BoardCreationModal")
+    @Html.Partial("BoardCreationModal") 
+</div>
+
+<div class="container">
+    <br />
+    <p>The Collaboration Board is an easy-to-use, online tool which allows multiple users to edit and work on the same online whiteboard
+     simultaneously. Apart from being a standard whiteboard, the Collaboration Board also offers several other convenient features facilitating
+     communicaton, such as an in-page chat system, equation rendering, text box functionality, and more. 
+     </p>
+
+    <img src="~/Content/images/1.PNG" alt="Screenshot 1" style="width:50%"> @*replace this with better screenshot*@
+
+    <br />
+
+    <p> The Collaboration Board is effective for students working on math and science problems and projects together. If you've ever tried to
+     explain a solution to a problem over Facebook, Gmail Chat, or Skype before, you may know how difficult it is to explain visuals and
+     equations to a friend through typed text. The Collaboration Board eliminates these problems.
+    </p>
 </div>
