--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -13,6 +13,8 @@
     @Styles.Render("~/fonts")
     @Styles.Render("~/katex_css")
     @Styles.Render("~/bundles/app_styles")
+
+    <link href="~/Content/App/poop.css" rel="stylesheet" />
 </head>
 <body>
     <div id="canvasContainer">
