--- a/CollaborationBoard/Views/Shared/_Layout.cshtml
+++ b/CollaborationBoard/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("FAQ", "FAQ", "Home")</li>
                 </ul>
             </div>
         </div>
