--- a/CollaborationBoard/Views/Home/Contact.cshtml
+++ b/CollaborationBoard/Views/Home/Contact.cshtml
@@ -5,7 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    <strong>Ivan Chub:</strong>   <a href="mailto:ivanchubster@gmail.com">ivanchubster@gmail.com</a><br />
-    <strong>Brian Gu:</strong> <a href="mailto:brianofpi@gmail.com">brianofpi@gmail.com</a> <br />
-    <strong>Dylan Milligan</strong> <a href="mailto:dilliganz@gmail.com">dilliganz@gmail.com</a> <br />
+    One Microsoft Way<br />
+    Redmond, WA 98052-6399<br />
+    <abbr title="Phone">P:</abbr>
+    425.555.0100
+</address>
+
+<address>
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
