made thickness picker functional and made the thickness persist on the server

--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -39,7 +39,8 @@
     </div>
 
     <div id="thicknessPicker" class="hidden">
-
+        <input min="2" max="50" id="thicknessSlider" type="range" data-show-value="true" value="2">
+        <div id="thicknessValue">2</div>
     </div>
 
     <div id="loadingBlind" class="blind"></div>
