--- a/CollaborationBoard/Views/Home/Index.cshtml
+++ b/CollaborationBoard/Views/Home/Index.cshtml
@@ -2,9 +2,4 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>Collaboration Board</h1>
-    <p class="lead">DESCRIPTION</p>
-
-    @Html.Partial("BoardCreationModal")
-</div>
+@Html.Partial("BoardCreationPartial")
