--- a/CollaborationBoard/Content/app.less
+++ b/CollaborationBoard/Content/app.less
@@ -433,18 +433,29 @@ body {
     width: 20px;
     height: 20px;
     margin: 5px;
-    /*border-radius: 100%;*/
     -webkit-box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
 
 #thicknessPicker {
+    .noSelect;
+    background-color: #586572;
     position: absolute;
-    top: 100px;
-    left: 100px;
-    width: 150px;
-    height: 20px;
-    background-color: red;
+    width: 200px;
+    height: 50px;
+    -webkit-box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.3);
+    padding: 5px;
+
+    #thicknessValue {
+        top: 50%;
+        left: 0;
+        width: 100%;
+        height: 20px;
+        text-align: center;
+        font-family: 'Droid Sans', sans-serif;
+        font-size: 10pt;
+        color: white;
+    }
 }
 
 #thicknessPicker.hidden {
