--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -43,6 +43,8 @@
         <div id="thicknessValue">2</div>
     </div>
 
+    <div id="optionsBlind" class="blind"></div>
+
     <div id="loadingBlind" class="blind"></div>
     <div id="disconnectedBlind" class="blind"><div id="disconnectedText">You were disconnected due to a network error. <br /> Refresh the page to reconnect.</div></div>
 
