started implementing a better home page

--- a/CollaborationBoard/Views/Home/Index.cshtml
+++ b/CollaborationBoard/Views/Home/Index.cshtml
@@ -2,4 +2,13 @@
     ViewBag.Title = "Home Page";
 }
 
-@Html.Partial("BoardCreationPartial")
+<div id="createContainer">
+    <div id="createDiv">
+        <h1>Create a Board</h1>
+        @Html.Partial("BoardCreationPartial")
+    </div>
+</div>
+
+<div id="infoContainer">
+
+</div>
