--- a/CollaborationBoard/Content/site.less
+++ b/CollaborationBoard/Content/site.less
@@ -88,3 +88,29 @@ input.checkbox:checked + label:after {
     align-items: center;
     justify-content: center;
 }
+
+#createContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 500px;
+
+    #createDiv {
+        width: 500px;
+        height: inherit;
+
+        h1 {
+            font-family: 'Droid Sans', sans-serif;
+            font-size: 50pt;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+    }
+}
+
+#infoContainer {
+    height: 500px;
+    width: 100%;
+    background-color: #5E5E5E;
+}
