made each page be contained in its own div

--- a/CollaborationBoard/Content/bootstrapStyle.less
+++ b/CollaborationBoard/Content/bootstrapStyle.less
@@ -4,6 +4,14 @@
     outline: none;
 }
 
+div.page {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .modal-content {
     border-radius: 0px;
 }
