--- a/CollaborationBoard/Views/Home/Index.cshtml
+++ b/CollaborationBoard/Views/Home/Index.cshtml
@@ -2,13 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<div id="createContainer">
-    <div id="createDiv">
-        <h1>Create a Board</h1>
-        @Html.Partial("BoardCreationPartial")
+<div id="index" class="page">
+    <div id="createContainer">
+        <div id="createDiv">
+            <h1>Create a Board</h1>
+            @Html.Partial("BoardCreationPartial")
+        </div>
     </div>
-</div>
 
-<div id="infoContainer">
+    <div id="infoContainer">
 
+    </div>
 </div>
