--- a/CollaborationBoard/Content/site.less
+++ b/CollaborationBoard/Content/site.less
@@ -21,35 +21,33 @@
 #index.page {
     overflow-x: hidden;
 
+    @createWidth: 150px;
+    @createHeight: 35px;
+
     #createContainer {
+        width: 100%;
+        height: 100%;
         display: flex;
-        justify-content: center;
         align-items: center;
-        width: 100%;
-        height: 500px;
-
-        #createDiv {
-            width: 500px;
-            height: inherit;
-
-            h1 {
-                font-family: 'Droid Sans', sans-serif;
-                font-size: 50pt;
-                text-align: center;
-                margin-bottom: 20px;
-            }
-        }
+        justify-content: center;
     }
 
-    #hiddenPasswordInput {
-        display: none;
+    #createBoardForm {
+        width: @createWidth;
+        height: @createHeight;
     }
 
-    #infoContainer {
-        height: 500px;
-        width: 100%;
-        background-color: #5E5E5E;
+    #submitCreate {
+        width: @createWidth;
+        height: @createHeight;
     }
+
+    #moreInfo {
+        width: @createWidth;
+        height: @createHeight;
+        margin-left: 15px;
+    }
+
 
     .checkbox {
         visibility: hidden;
