started implementing a nice looking home page

--- a/CollaborationBoard/Content/site.less
+++ b/CollaborationBoard/Content/site.less
@@ -32,6 +32,15 @@
         justify-content: center;
     }
 
+    #pageBackground {
+        width: 100vw;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+
     #createBoardForm {
         width: @createWidth;
         height: @createHeight;
