--- a/CollaborationBoard/Views/Home/Index.cshtml
+++ b/CollaborationBoard/Views/Home/Index.cshtml
@@ -3,5 +3,6 @@
 }
 
 <div id="index" class="page">
+    <img id="pageBackground" src="/Content/img/background.jpg" />
     @Html.Partial("BoardCreationPartial")
 </div>
