--- a/CollaborationBoard/Views/Shared/BoardCreationPartial.cshtml
+++ b/CollaborationBoard/Views/Shared/BoardCreationPartial.cshtml
@@ -6,5 +6,5 @@
     <form id="createBoardForm" action="/Board/Create" method="post">
         <button id="submitCreate" type="submit" class="btn btn-success">Create a Board</button>
     </form>
-    <button id="moreInfo" class="btn btn-info">More Info</button>
+    <a id="moreInfo" href="/home/about" class="btn btn-info">More Info</a>
 </div>
