fixed bug where new users could not be added, and where if a user that was not already added leaves a board and sends the disconnect event, also updated start page

--- a/CollaborationBoard/Content/site.less
+++ b/CollaborationBoard/Content/site.less
@@ -35,10 +35,11 @@
     #pageBackground {
         width: 100vw;
         height: 100vh;
+        background-size: cover;
         position: absolute;
+        z-index: -1;
         top: 0;
         left: 0;
-        z-index: -1;
     }
 
     #createBoardForm {
