--- a/CollaborationBoard/Views/Home/Index.cshtml
+++ b/CollaborationBoard/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div id="index" class="page">
-    <img id="pageBackground" src="/Content/img/background.jpg" />
+        <div id="pageBackground" style="background-image:url(/Content/img/background.jpg)"></div>
     @Html.Partial("BoardCreationPartial")
 </div>
