made name change button smaller so that it looks more flush with the rest of the messenger

--- a/CollaborationBoard/Content/app.less
+++ b/CollaborationBoard/Content/app.less
@@ -324,6 +324,10 @@
         resize: none;
     }
 
+    #nameChangeToggle {
+        width: 25px;
+    }
+
     #latexInputButton {
         float: left;
         width: @latexButtonWidth;
