fixed name change margin to have more space, fixed name change notification string to have the word "name" in it

--- a/CollaborationBoard/Content/site.less
+++ b/CollaborationBoard/Content/site.less
@@ -1,4 +1,10 @@
-﻿#password.page {
+﻿.page {
+    .modal-body {
+        margin-bottom: 20px;
+    }
+}
+
+#password.page {
     width: 100%;
     height: 100%;
     position: absolute;
