made index page look super pretty

--- a/CollaborationBoard/Views/Shared/BoardCreationPartial.cshtml
+++ b/CollaborationBoard/Views/Shared/BoardCreationPartial.cshtml
@@ -3,8 +3,13 @@
 }
 
 <div id="createContainer">
-    <form id="createBoardForm" action="/Board/Create" method="post">
-        <button id="submitCreate" type="submit" class="btn btn-success">Create a Board</button>
-    </form>
-    <a id="moreInfo" href="/home/about" class="btn btn-info">More Info</a>
+    <div id="titleItems">
+        <h1 id="title">Collaboration Board</h1>
+        <div id="buttonContainer">
+            <form id="createBoardForm" action="/Board/Create" method="post">
+                <button id="submitCreate" type="submit" class="btn btn-success">Create a Board</button>
+            </form>
+            <a id="moreInfo" href="/home/about" class="btn btn-info">More Info</a>
+        </div>
+    </div>
 </div>
