--- a/CollaborationBoard/Content/site.less
+++ b/CollaborationBoard/Content/site.less
@@ -38,6 +38,20 @@
         justify-content: center;
     }
 
+    #titleItems {
+        width: auto;
+        height: auto;
+        margin-top: -200px;
+    }
+
+    #title {
+        font-size: 50pt;
+        width: 100%;
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        color: white;
+    }
+
     #pageBackground {
         width: 100vw;
         height: 100vh;
@@ -48,7 +62,18 @@
         left: 0;
     }
 
+    #buttonContainer {
+        display: flex;
+        justify-content: center;
+    }
+
+    .indexButton{
+        font-family: 'Roboto', sans-serif;
+        font-size: 12pt;
+    }
+
     #createBoardForm {
+        float: left;
         width: @createWidth;
         height: @createHeight;
     }
@@ -56,12 +81,15 @@
     #submitCreate {
         width: @createWidth;
         height: @createHeight;
+        .indexButton;
     }
 
     #moreInfo {
+        float: left;
         width: @createWidth;
         height: @createHeight;
         margin-left: 15px;
+        .indexButton;
     }
 
 
