--- a/CollaborationBoard/Views/Shared/_Layout.cshtml
+++ b/CollaborationBoard/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title</title>
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     @Styles.Render("~/bundles/font_awesome")
     @Styles.Render("~/bundles/css")
     @Styles.Render("~/bundles/font_awesome")
