--- a/CollaborationBoard/Content/site.less
+++ b/CollaborationBoard/Content/site.less
@@ -67,7 +67,7 @@
         justify-content: center;
     }
 
-    .indexButton{
+    .indexButton {
         font-family: 'Roboto', sans-serif;
         font-size: 12pt;
     }
@@ -158,5 +158,24 @@
     .checktext .fa {
         font-size: 15pt;
         margin-top: 5px;
+    }
+}
+
+#about.page {
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14pt;
+    overflow-x: hidden;
+    text-align: center;
+
+    h1 {
+        font-size: 50px;
+        width: 100%;
+    }
+
+    #content {
+        width: 800px;
     }
 }
