--- a/CollaborationBoard/Views/Home/About.cshtml
+++ b/CollaborationBoard/Views/Home/About.cshtml
@@ -1,7 +1,18 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div id="about" class="page">
+
+    <div id="content">
+        <h1>What is Collaboration Board?</h1>
+        Collaboration Board is a service that allows people to help each other over the internet through the use of pictures. Motivated by the frustration of explaining difficult math problems over Facebook messenger or Google Hangouts, we created this website to make sharing diagrams and math equations simple. You don't have to hold up your notebook to your webcam, or take pictures of math homework to share with your friends. All you need to do to help someone out is hop on to Collaboration Board, click a button to generate a fresh board, and share the url. All updates are shared instantly with everybody else on the board (think Google Docs, but for drawing). There is also a messaging feature that allows you to send not only plain text, but LaTeX formatted equations!
+        <h2>Why was this created?</h2>
+        We are in the International Baccalaureate program at Interlake High School, and as part of our curriculum we had to work on a project that helps out our community in some way. We chose to create this website because it would help solve a problem that many students at our school face: helping each other understand and solve difficult math homework.
+        <h2>How does this work?</h2>
+        This is a website created using <a href="http://www.asp.net/mvc">Asp.Net MVC 5</a>. Some of the styles came from <a href="http://getbootstrap.com/">Twitter Bootstrap</a>, though most are custom. <a href="http://signalr.net/">SignalR</a> was used to publish drawing updates to all the clients quickly and reliably. All the beautiful icons come from <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a>. LaTeX rendering was done via the <a href="https://github.com/Khan/KaTeX">KaTeX</a> library. Client-side code was written in <a href="http://www.typescriptlang.org/">TypeScript</a>. Custom styles were created using the <a href="http://lesscss.org/">Less</a> framework. Of course, <a href="https://jquery.com/">jQuery</a> was an essential part of this project. Finally, the photo on the front page was taken by <a href="https://www.linkedin.com/in/ivanchub">Ivan Chub</a> (more photos can be found <a href="https://500px.com/ivanchub">here</a>).
+        <h2>Contact</h2>
+        If your are interested in learning more, reach out to <a href="mailto:ivansergchub@gmail.com">ivansergchub@gmail.com</a>.
+    </div>
+</div>
+
