added a help page and button in the UI that takes you there

--- a/CollaborationBoard/Content/app.less
+++ b/CollaborationBoard/Content/app.less
@@ -114,7 +114,7 @@
     @toolboxMargin: 2px;
     @toolboxIconSize: 15pt;
     @toolTitleSize: 15px;
-    @toolBoxWidth: 5 * @toolboxItemWidth + 2 * @toolboxMargin;
+    @toolBoxWidth: 6 * @toolboxItemWidth + 2 * @toolboxMargin;
 
     #toolbox {
         .noSelect;
@@ -148,6 +148,11 @@
         text-align: center;
         font-size: 8pt;
         font-family: 'Droid Sans', sans-serif;
+
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
     }
 
     .iconButton {
