--- a/CollaborationBoard/Content/site.less
+++ b/CollaborationBoard/Content/site.less
@@ -161,18 +161,22 @@
     }
 }
 
-#about.page {
+#about.page, #help.page {
     display: flex;
     justify-content: center;
     padding: 50px;
     font-family: 'Roboto', sans-serif;
     font-size: 14pt;
     overflow-x: hidden;
-    text-align: center;
 
     h1 {
         font-size: 50px;
         width: 100%;
+        text-align: center;
+    }
+
+    h2 {
+        text-align: center;
     }
 
     #content {
