--- a/CollaborationBoard/Views/Board/Board.cshtml
+++ b/CollaborationBoard/Views/Board/Board.cshtml
@@ -33,6 +33,7 @@
                 <div class="buttonGroup" id="thickness"> <div class="iconButton"><i class="fa fa-sliders"></i></div>size</div>
                 <div class="buttonGroup" id="clear"><div class="iconButton"><i class="fa fa-times"></i></div>clear</div>
             </div>
+            <div class="buttonGroup" id="help"><a href="/home/help"><div class="iconButton"><i class="fa fa-question"></i></div>help</a></div>
         </div>
 
         <div id="colorPicker" class="hidden">
