changed all public-facing code to reflect the new name: "Paper Together"

--- a/CollaborationBoard/Views/Password/Login.cshtml
+++ b/CollaborationBoard/Views/Password/Login.cshtml
@@ -4,7 +4,7 @@
 
 <div id="password" class="page">
     <div id="passwordFormContainer">
-        <form role="form" action="/Password/Board/@ViewBag.BoardId/Validate" method="post">
+        <form role="form" action="/Password/Paper/@ViewBag.BoardId/Validate" method="post">
             <div class="form-group">
                 <div class="row">
                     <div class="input-group">
