--- a/CollaborationBoard/Views/Shared/BoardCreationPartial.cshtml
+++ b/CollaborationBoard/Views/Shared/BoardCreationPartial.cshtml
@@ -4,10 +4,10 @@
 
 <div id="createContainer">
     <div id="titleItems">
-        <h1 id="title">Collaboration Board</h1>
+        <h1 id="title">Paper Together</h1>
         <div id="buttonContainer">
-            <form id="createBoardForm" action="/Board/Create" method="post">
-                <button id="submitCreate" type="submit" class="btn btn-success">Create a Board</button>
+            <form id="createBoardForm" action="/Paper/Create" method="post">
+                <button id="submitCreate" type="submit" class="btn btn-success">Create a Sheet</button>
             </form>
             <a id="moreInfo" href="/home/about" class="btn btn-info">More Info</a>
         </div>
