--- a/CollaborationBoard/Views/Home/About.cshtml
+++ b/CollaborationBoard/Views/Home/About.cshtml
@@ -5,8 +5,8 @@
 <div id="about" class="page">
 
     <div id="content">
-        <h1>What is Collaboration Board?</h1>
-        Collaboration Board is a service that allows people to help each other over the internet through the use of pictures. Motivated by the frustration of explaining difficult math problems over Facebook messenger or Google Hangouts, we created this website to make sharing diagrams and math equations simple. You don't have to hold up your notebook to your webcam, or take pictures of math homework to share with your friends. All you need to do to help someone out is hop on to Collaboration Board, click a button to generate a fresh board, and share the url. All updates are shared instantly with everybody else on the board (think Google Docs, but for drawing). There is also a messaging feature that allows you to send not only plain text, but LaTeX formatted equations!
+        <h1>What is Paper Together?</h1>
+        Paper Together is a service that allows people to help each other over the internet through the use of pictures. Motivated by the frustration of explaining difficult math problems over Facebook messenger or Google Hangouts, we created this website to make sharing diagrams and math equations simple. You don't have to hold up your notebook to your webcam, or take pictures of math homework to share with your friends. All you need to do to help someone out is hop on to Paper Together, click a button to generate a fresh sheet, and share the url. All updates are shared instantly with everybody else on the sheet (think Google Docs, but for drawing). There is also a messaging feature that allows you to send not only plain text, but LaTeX formatted equations!
         <h2>Why was this created?</h2>
         We are in the International Baccalaureate program at Interlake High School, and as part of our curriculum we had to work on a project that helps out our community in some way. We chose to create this website because it would help solve a problem that many students at our school face: helping each other understand and solve difficult math homework.
         <h2>How does this work?</h2>
