--- a/CollaborationBoard/Views/Paper/Sheet.cshtml
+++ b/CollaborationBoard/Views/Paper/Sheet.cshtml
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-    <title>Board</title>
+    <title>Sheet</title>
     @Styles.Render("~/bundles/font_awesome")
     @Styles.Render("~/bundles/css")
     @Styles.Render("~/katex_css")
