--- a/CollaborationBoard/Views/Paper/Sheet.cshtml
+++ b/CollaborationBoard/Views/Paper/Sheet.cshtml
@@ -66,14 +66,27 @@
             document.body.addEventListener("touchmove", preventScroll)
             document.body.addEventListener("mousewheel", preventScroll)
         </script>
-
-        @Scripts.Render("~/bundles/app_scripts")
-        @Scripts.Render("~/bundles/modernizr")
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        @Scripts.Render("~/bundles/common_scripts")
-        @Scripts.Render("~/signalr/hubs")
-        @Scripts.Render("~/katex_script")
     </div>
+
+    @Scripts.Render("~/bundles/app_scripts")
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/common_scripts")
+    @Scripts.Render("~/signalr/hubs")
+    @Scripts.Render("~/katex_script")
+
+    <!-- Google Analytics -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-62629661-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 </html>
