--- a/CollaborationBoard/Views/Home/Help.cshtml
+++ b/CollaborationBoard/Views/Home/Help.cshtml
@@ -29,6 +29,6 @@
         </ul>
 
         <h2>LaTeX</h2>
-        When writing a message, sorround any text you want to be rendered with LaTeX in backticks. For example: `\sin\frac{\pi}{\2}`. Many math commands are supported, but don't expect to be able to use the full set of commands available in LaTeX, this is a browser, after all.
+        When writing a message, surround any text you want to be rendered with LaTeX in backticks. For example: `\sin\frac{\pi}{2}`. Many math commands are supported, but don't expect to be able to use the full set of commands available in LaTeX, this is a browser, after all.
     </div>
 </div>
