fixed a lot of issues for internet explorer

--- a/CollaborationBoard/Content/app.less
+++ b/CollaborationBoard/Content/app.less
@@ -273,7 +273,7 @@
                 .date {
                     .detail;
                     text-align: right;
-                    float: right;
+                    float: left;
                 }
             }
 
