--- a/CollaborationBoard/Views/Home/About.cshtml
+++ b/CollaborationBoard/Views/Home/About.cshtml
@@ -3,7 +3,9 @@
 }
 
 <div id="about" class="page">
-
+    <div id="navBar">
+        <a href="/" class="btn btn-default"><i class="fa fa-home"></i> Home</a>
+    </div>
     <div id="content">
         <h1>What is Paper Together?</h1>
         Paper Together is a service that allows people to help each other over the internet through the use of pictures. Motivated by the frustration of explaining difficult math problems over Facebook messenger or Google Hangouts, we created this website to make sharing diagrams and math equations simple. You don't have to hold up your notebook to your webcam, or take pictures of math homework to share with your friends. All you need to do to help someone out is hop on to Paper Together, click a button to generate a fresh sheet, and share the url. All updates are shared instantly with everybody else on the sheet (think Google Docs, but for drawing). There is also a messaging feature that allows you to send not only plain text, but LaTeX formatted equations!
@@ -12,7 +14,7 @@
         <h2>How does this work?</h2>
         This is a website created using <a href="http://www.asp.net/mvc">Asp.Net MVC 5</a>. Some of the styles came from <a href="http://getbootstrap.com/">Twitter Bootstrap</a>, though most are custom. <a href="http://signalr.net/">SignalR</a> was used to publish drawing updates to all the clients quickly and reliably. All the beautiful icons come from <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a>. LaTeX rendering was done via the <a href="https://github.com/Khan/KaTeX">KaTeX</a> library. Client-side code was written in <a href="http://www.typescriptlang.org/">TypeScript</a>. Custom styles were created using the <a href="http://lesscss.org/">Less</a> framework. Of course, <a href="https://jquery.com/">jQuery</a> was an essential part of this project. Finally, the photo on the front page was taken by <a href="https://www.linkedin.com/in/ivanchub">Ivan Chub</a> (more photos can be found <a href="https://500px.com/ivanchub">here</a>).
         <h2>Contact</h2>
-        If your are interested in learning more, reach out to <a href="mailto:ivansergchub@gmail.com">ivansergchub@gmail.com</a>.
+        If you are interested in learning more, reach out to <a href="mailto:ivansergchub@gmail.com">ivansergchub@gmail.com</a>.
     </div>
 </div>
 
