--- a/CollaborationBoard/Views/Home/Help.cshtml
+++ b/CollaborationBoard/Views/Home/Help.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div id="help" class="page">
+    <div id="navBar">
+        <button class="btn btn-default" onclick="window.history.back();"><i class="fa fa-arrow-left"></i> Back</button>
+        <a href="/" class="btn btn-default"><i class="fa fa-home"></i> Home</a>
+    </div>
     <div id="content">
         <h2>Controls</h2>
         <ul>
@@ -30,5 +34,8 @@
 
         <h2>LaTeX</h2>
         When writing a message, surround any text you want to be rendered with LaTeX in backticks. For example: `\sin\frac{\pi}{2}`. Many math commands are supported, but don't expect to be able to use the full set of commands available in LaTeX, this is a browser, after all.
+
+        <h2>Sharing</h2>
+        To work with someone on the same sheet at the same time, just share the url of the sheet you are on! You can even have the same sheet open in multiple tabs on one computer - it just works.
     </div>
 </div>
