--- a/CollaborationBoard/Content/site.less
+++ b/CollaborationBoard/Content/site.less
@@ -49,7 +49,7 @@
         width: 100%;
         text-align: center;
         font-family: 'Roboto', sans-serif;
-        color: white;
+        color: #054B69;
     }
 
     #pageBackground {
